[tool.poetry]
name = "OneHopTests"
version = "0.0.1"
description = "One Hop TRAPI mediated semantics-driven tests for testing Translator TRAPI Components (KPs and ARAs)"
authors = [
    "Richard Bruskiewich <richard.bruskiewich@delphinai.com>",
    "Chris Bizon <bizon.renci.org>",
    "Tim Putnam <tim@tislab>"
]
maintainers = ["Richard Bruskiewich <richard.bruskiewich@delphinai.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/TranslatorSRI"
repository = "https://github.com/TranslatorSRI/OneHopTests"
documentation = "https://github.com/TranslatorSRI/OneHopTests/blob/main/README.md"
keywords = [
    "NCATS",
    "Biomedical Data Translator",
    "Translator",
    "ReasonerAPI",
    "TRAPI",
    "validation",
    "Biolink Model"
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9"
]

packages = [
    {include = "one_hop_tests"}
]

include = [
    { path = "tests" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
reasoner-validator = "^3.9.4"
translator-testing-model = '*'
pytest-asyncio = "^0.21.1"

# [tool.poetry.group.dev.dependencies]

[tool.poetry.urls]
"Change Log" = "https://github.com/TranslatorSRI/OneHopTests/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/TranslatorSRI/OneHopTests/issues"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"